Finished product, some alignment issues

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,7 +49,7 @@ a {
 .container {
   display: flex;
   justify-content: space-between;
-  margin: 100px;
+  margin: 40px 180px;
 }
 
 .large{
@@ -60,6 +60,7 @@ a {
   width: 300px;
   display: flex;
   flex-direction: column;
+  padding: 0px;
 
 }
 .small {
@@ -139,4 +140,23 @@ span {
 }
 .orca {
   padding-bottom: 14px;
+}
+/* Use margins to contain the <p> */
+
+.medium2 {
+  background-image: url("./images/img-story-1.png");
+  height: 300px;
+
+}
+.cookie span {
+  color: black;
+}
+.list span {
+  color: grey;
+  font-size: 12px;
+  border-bottom: 1px solid dimgrey;
+  padding: 11px 20px;
+  font-family: verdana;
+  text-align: left;
+  background-color: whitesmoke;
 }
